[meatadata]
    name="diceware"
    version=version["version"]
    author="Uli Fouquet"
    author_email="uli@gnufix.de"
    description= "Passphrases you will remember."
    license="GPL 3.0"
    keywords="diceware password passphrase"
    url="https://github.com/ulif/diceware/"
    packages='diceware'
    classifiers=
        "Development Status :: 3 - Alpha"
        "Environment :: Console"
        "Intended Audience :: End Users/Desktop"
        "Intended Audience :: System Administrators"
        "Topic :: Utilities"
        "Topic :: Security :: Cryptography"
        "Operating System :: POSIX :: Linux"
        "Programming Language :: Python :: 2"
        "Programming Language :: Python :: 2.7"
        "Programming Language :: Python :: 3"
        "Programming Language :: Python :: 3.4"
        "Programming Language :: Python :: 3.5"
        "Programming Language :: Python :: 3.6"
        "Programming Language :: Python :: 3.7"
        "Programming Language :: Python :: 3.8"
        "Programming Language :: Python :: 3.9"
        "Programming Language :: Python :: Implementation :: CPython"
        "Programming Language :: Python :: Implementation :: PyPy"

[options.entry_points]
console_scripts =
	diceware = diceware:main
