[meatadata]
    name="diceware"
    version=version["version"]
    author="Uli Fouquet"
    author_email="uli@gnufix.de"
    description= "Passphrases you will remember."
    license="GPL 3.0"
    keywords="diceware password passphrase"
    url="https://github.com/ulif/diceware/"
    packages='diceware'

[options.entry_points]
console_scripts =
	diceware = diceware:main

[options.package_data]
diceware/wordlists =
  *.txt
