[meatadata]
    name="diceware"
    version=version["version"]
    author="Uli Fouquet"
    author_email="uli@gnufix.de"
    description= "Passphrases you will remember."
    license="GPL 3.0"
    keywords="diceware password passphrase"
    url="https://github.com/ulif/diceware/"
    packages='diceware'

[options]
packages = find_namespace:
package_dir =
    = diceware
include_package_data = True

[options.packages.find]
where = diceware

# [options]
# packages = find_namespace:
# package_dir =
#     = diceware
# # include_package_data = True

# [options.packages.find]
# where = diceware

# [options.package_data]
# diceware.wordlists =
#   *.txt

[options.entry_points]
console_scripts =
	diceware = diceware:main
